--- a/serverless.yml
+++ b/serverless.yml
@@ -41,6 +41,10 @@ functions:
       - http:
           path: users/{id}
           method: GET
+          request:
+            parameters:
+              paths:
+                id: true
     package:
       patterns:
         - "getUsers/handler.js"
@@ -50,6 +54,9 @@ functions:
       - http:
           path: users
           method: POST
+          request:
+            schemas:
+              application/json: ${file(schemas/user-schema.json)}
     package:
       patterns:
         - "createUser/handler.js"
@@ -59,6 +66,12 @@ functions:
       - http:
           path: users/{id}
           method: PATCH
+          request:
+            parameters:
+              paths:
+                id: true
+            schemas:
+              application/json: ${file(schemas/user-schema.json)}
     package:
       patterns:
         - "updateUser/handler.js"
@@ -68,6 +81,10 @@ functions:
       - http:
           path: users/{id}
           method: DELETE
+          request:
+            parameters:
+              paths:
+                id: true
     package:
       patterns:
         - "deleteUser/handler.js"
