--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "handler.js",
   "scripts": {
     "start": "sls offline start",
+    "deploy": "sls deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serverless-dynamodb-local": "^0.2.40"
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.1352.0",
     "serverless": "^3.21.0",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^12.0.4"
   }
 }
