--- a/serverless.yml
+++ b/serverless.yml
@@ -15,15 +15,16 @@ provider:
   environment:
     BUCKET: bucket-serveless-course-p2023
 
-plugins:
-  - serverless-offline
-  - serverless-dynamodb-local
+# plugins:
+#   - serverless-offline
+#   - serverless-dynamodb-local
 
 package:
   individually: true
   patterns:
-    - "!.dynamodb"
-    - "!node_modules"
+    - "!*/**"
+    - "!nodejs*"
+    - "!*.zip"
 
 custom:
   dynamodb:
@@ -106,6 +107,28 @@ functions:
             parameters:
               querystrings:
                 filename: true
+  thumbGenerator:
+    handler: thumbnail/handler.thumbnailGenerator
+    layers:
+      - { Ref: BaseLambdaLayer }
+    package:
+      patterns:
+        - "thumbnail/handler.js"
+    events:
+      - s3:
+          bucket: bucket-serveless-course-p2023
+          event: s3:ObjectCreated:*
+          existing: true
+          rules:
+            - prefix: upload/
+
+layers:
+  base:
+    name: "prod-dependencies"
+    compatibleRuntimes:
+      - "nodejs14.x"
+    package:
+      artifact: nodejs.zip
 
 resources:
   Resources:
